# amazon-personalize-langchain-extensions

./: .gitignore  README.md  pyproject.toml
aws_langchain/: __init__.py
aws_langchain/chains/recommenders/: amazon_personalize_chain.py
aws_langchain/utilities/: amazon_personalize.py
samples/: amazon_personalize_chain_how_to.ipynb  main.py
